	* bin/IgProfAnalyse.cc: add a proper filter to dump
	  heap map information. This also adds the top ten
	  stacktraces so that we can highlight them on the 
	  map.

	* bin/IgProfAnalyse.cc: simplify the tree walking
	  / filtering class removing the unneeded templation
	  and filter type hierarchy.

	* bin/IgProfAnalyse.cc: fixes a regression when
	  --dump-allocations option is not passed in.

2009-11-14  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: fixes a regression introduced by 
	  wrong leak parsing. Notice that This will replaced soon
	  by rewritten code which does the dumping in a filter 
	  rather than while reading the profile.

2009-11-13  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProf.cc, plugins/IgProfModule.cc, plugins/IgProfService.cc
	  src/IgProfTrace.cc, test/test_instrumentation.cc: silencing
	  warnings which seem to be correct / conditionally supported
	  in future version of the standard and therefore currently 
	  there as gcc extension.

2009-11-11  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: do not close the allocation
	  dump file if no --dump-allocations options was 
	  passed.

2009-11-10  Giulio Eulisse <giulio.eulisse@cern.ch>

	* scripts/igprof-navigator: improved support for the
	  new naming schema, grouping PileUp and Global Tag 
	  information.

2009-11-09  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: initial implementation of
	  --dump-allocations <filename> option which 
	  dumps into a file called `filename' the list 
	  of all the live allocations found in the dump.
	  The format of the output file is:
	  <node-id>,<symbol-id>:<allocation-ptr>,<size>
	  where <node-id> is a unique identifier for 
	  the callpath, symbol-id is an identifier for
	  the method doing the allocation, while allocation
	  ptr and size are a description of the allocation.
	  Notice that for the moment <symbol-id> is
	  not very meaningful, this refers to the original